source/uniandes/lym/robot/control/Robot.java
/* Robot.java */
/* Generated By:JavaCC: Do not edit this line. Robot.java */
package uniandes.lym.robot.control;

import uniandes.lym.robot.kernel.*;
import uniandes.lym.robot.view.Console;

import java.awt.Point;
import java.io.*;
import java.util.Vector;
import java.util.LinkedList;
import java.util.HashMap;
import java.util.ArrayList;

@SuppressWarnings("serial")
public class Robot implements RobotConstants {


        private RobotWorldDec world;


        void setWorld(RobotWorld w) {
                world = (RobotWorldDec) w;
        }

        String salida=new String();
        HashMap<String, Integer> variables = new HashMap<>();
        HashMap<String, ArrayList<String>> defProc = new HashMap<>();

  final public boolean command(Console sistema) throws ParseException {int x,y;
                String nom;
                salida=new String();
                boolean ejecutar  = true;
                boolean posible;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case JUMP:
    case WALK:
    case LEAP:
    case TURN:
    case TURNTO:
    case DROP:
    case GET:
    case GRAB:
    case LETGO:
    case NOP:
    case IF:
    case REPEAT:
    case DEFVAR:
    case DEFPROC:
    case STR:
    case 39:{
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case JUMP:
        case WALK:
        case LEAP:
        case TURN:
        case TURNTO:
        case DROP:
        case GET:
        case GRAB:
        case LETGO:
        case NOP:
        case STR:{
          posible = simpleCommand(ejecutar);
          break;
          }
        case DEFPROC:{
          jj_consume_token(DEFPROC);
          defProc(ejecutar);
          break;
          }
        case DEFVAR:{
          jj_consume_token(DEFVAR);
          nom = nombre();
          x = num();
variables.put(nom,x);
                  salida="Command: definir variable ";
          break;
          }
        case IF:{
          conditional();
          break;
          }
        case 39:{
          jj_consume_token(39);
          block(ejecutar);
          jj_consume_token(40);
          break;
          }
        case REPEAT:{
          repeatTimes();
          break;
          }
        default:
          jj_la1[0] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
try {
                                 Thread.sleep(900);
                    } catch (InterruptedException e) {
                                        System.err.format("IOException: %s%n", e);
                            }

                        sistema.printOutput(salida);
                        {if ("" != null) return true;}
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case JUMP:
        case WALK:
        case LEAP:
        case TURN:
        case TURNTO:
        case DROP:
        case GET:
        case GRAB:
        case LETGO:
        case NOP:
        case IF:
        case REPEAT:
        case DEFVAR:
        case DEFPROC:
        case STR:
        case 39:{
          ;
          break;
          }
        default:
          jj_la1[1] = jj_gen;
          break label_1;
        }
      }
      break;
      }
    case 0:{
      jj_consume_token(0);
{if ("" != null) return false;}
      break;
      }
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}

  final public void block(boolean ejecutar) throws ParseException {int x,y;
                boolean posible;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case JUMP:
    case WALK:
    case LEAP:
    case TURN:
    case TURNTO:
    case DROP:
    case GET:
    case GRAB:
    case LETGO:
    case NOP:
    case STR:{
      posible = simpleCommand(ejecutar);
      break;
      }
    case IF:{
      conditional();
      break;
      }
    case WHILE:{
      loop();
      break;
      }
    case REPEAT:{
      repeatTimes();
      break;
      }
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
try {
                                 Thread.sleep(900);
                    } catch (InterruptedException e) {
                                        System.err.format("IOException: %s%n", e);
                            }
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case 41:{
        ;
        break;
        }
      default:
        jj_la1[4] = jj_gen;
        break label_2;
      }
      jj_consume_token(41);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case JUMP:
      case WALK:
      case LEAP:
      case TURN:
      case TURNTO:
      case DROP:
      case GET:
      case GRAB:
      case LETGO:
      case NOP:
      case STR:{
        posible = simpleCommand(ejecutar);
        break;
        }
      case IF:{
        conditional();
        break;
        }
      case WHILE:{
        loop();
        break;
        }
      case REPEAT:{
        repeatTimes();
        break;
        }
      default:
        jj_la1[5] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
}

//void defProc(boolean ejecutar):
//	{
//	 int x;
//	 String nom;
//	}
//	{nom=nombre() (("("(x=valor()(","x=valor())*)*")")|("()"))  "{"block(ejecutar)"}" }
  final public void defProc(boolean ejecutar) throws ParseException {int x;
  String nom;
 ArrayList<String> value = new ArrayList<String>();
    nom = nombre();
    jj_consume_token(42);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 43:{
      jj_consume_token(43);
      break;
      }
    case STR:{
      jj_consume_token(STR);
value.add(token.image);
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case 44:{
          ;
          break;
          }
        default:
          jj_la1[6] = jj_gen;
          break label_3;
        }
        jj_consume_token(44);
        jj_consume_token(STR);
value.add(token.image);
      }
      break;
      }
    default:
      jj_la1[7] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(43);
defProc.put(nom, value);
    jj_consume_token(39);
    block(false);
    jj_consume_token(40);
}

  final public boolean jump(boolean ejecutar) throws ParseException {int x,y;
          boolean posible = true;
    x = valor();
    jj_consume_token(44);
    y = valor();
if(ejecutar) {
              try {
                if(x!= -1 && y!=-1) {
                world.setPostion(x,y);salida = "Command: Jump"; }
                else { salida= "Variable no definida";}
                        }

            catch(Error e) {
              posible = false;
              salida = "Comando no ejecutable\n"+e;
              }
                }
            {if ("" != null) return posible;}
    throw new Error("Missing return statement in function");
}

  final public boolean walk(boolean ejecutar) throws ParseException {int x=0;
          boolean facing;
          boolean posible= true;
          String command = "";
    x = valor();
command = "front";
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 44:{
      jj_consume_token(44);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case FRONT:{
        jj_consume_token(FRONT);
command = "front";
        break;
        }
      case BACK:{
        jj_consume_token(BACK);
command = "back";
        break;
        }
      case RIGHT:{
        jj_consume_token(RIGHT);
command = "right";
        break;
        }
      case LEFT:{
        jj_consume_token(LEFT);
command = "left";
        break;
        }
      case NORTH:{
        jj_consume_token(NORTH);
command = "north";
        break;
        }
      case SOUTH:{
        jj_consume_token(SOUTH);
command = "south";
        break;
        }
      case EAST:{
        jj_consume_token(EAST);
command = "east";
        break;
        }
      case WEST:{
        jj_consume_token(WEST);
command = "west";
        break;
        }
      default:
        jj_la1[8] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
      }
    default:
      jj_la1[9] = jj_gen;
      ;
    }
if(ejecutar) {
           if(x== -1) {salida="variable no definida";}
           else if(command == "front") {
             try {
             world.moveForward(x,false);salida = "Command: Walk F";}
                catch(Error e) {
                  posible = false;
                  salida = "Comando no ejecutable\n"+e; }
                  }
                else if(command == "back") {
             try {
             world.moveForward(-x,false);salida = "Command: Walk B";}
                catch(Error e) {
                  posible = false;
                  salida = "Comando no ejecutable\n"+e; }
             }
             else if(command == "right") {
             try {
             world.moveHorizontally(x,false);salida = "Command: Walk R";}
                catch(Error e) {
                  posible = false;
                 salida = "Comando no ejecutable\n"+e; }
             }
              else if(command == "left") {
             try {
             world.moveHorizontally(-x,false);salida = "Command: Walk L";}
                catch(Error e) {
                  posible = false;
                 salida = "Comando no ejecutable\n"+e; }
             }
             else if(command == "north") {
             try {
             facing = world.facingNorth();
                while(facing == false)
                        {world.turnRight();
                facing = world.facingNorth();
                        }
             world.moveForward(x, false);
             salida = "Command: Walk N";}
                catch(Error e) {
                  posible = false;
                 salida = "Comando no ejecutable\n"+e; }
             }
             else if(command == "south") {
             try {
             facing = world.facingSouth();
                while(facing == false)
                        {world.turnRight();
                facing = world.facingSouth();
                        }
             world.moveForward(x, false);
             salida = "Command: Walk S";}
                catch(Error e) {
                  posible = false;
                 salida = "Comando no ejecutable\n"+e; }
             }
              else if(command == "east") {
             try {
             facing = world.facingEast();
                while(facing == false)
                        {world.turnRight();
                facing = world.facingEast();
                        }
             world.moveForward(x, false);
             salida = "Command: Walk E";}
                catch(Error e) {
                  posible = false;
                  salida = "Comando no ejecutable\n"+e; }
             }
             else if(command == "west") {
             try {
             facing = world.facingWest();
                while(facing == false)
                        {world.turnRight();
                facing = world.facingWest();
                        }
             world.moveForward(x, false);
             salida = "Command: Walk W";}
                catch(Error e) {
                  posible = false;
                  salida = "Comando no ejecutable\n"+e; }
             }
         }
           {if ("" != null) return posible;}
    throw new Error("Missing return statement in function");
}

  final public boolean leap(boolean ejecutar) throws ParseException {int x=0;
          boolean facing;
          boolean posible= true;
          String command = "";
    x = valor();
command = "front";
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case 44:{
      jj_consume_token(44);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case FRONT:{
        jj_consume_token(FRONT);
command = "front";
        break;
        }
      case BACK:{
        jj_consume_token(BACK);
command = "back";
        break;
        }
      case RIGHT:{
        jj_consume_token(RIGHT);
command = "right";
        break;
        }
      case LEFT:{
        jj_consume_token(LEFT);
command = "left";
        break;
        }
      case NORTH:{
        jj_consume_token(NORTH);
command = "north";
        break;
        }
      case SOUTH:{
        jj_consume_token(SOUTH);
command = "south";
        break;
        }
      case EAST:{
        jj_consume_token(EAST);
command = "east";
        break;
        }
      case WEST:{
        jj_consume_token(WEST);
command = "west";
        break;
        }
      default:
        jj_la1[10] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
      }
    default:
      jj_la1[11] = jj_gen;
      ;
    }
if(ejecutar) {
           if(x== -1) {salida="variable no definida";}
           else if(command == "front") {
             try {
             world.moveForward(x,true);salida = "Command: Walk F";}
                catch(Error e) {
                  posible = false;
                  salida = "Comando no ejecutable\n"+e; }
                  }
                else if(command == "back") {
             try {
             world.moveForward(-x,true);salida = "Command: Walk B";}
                catch(Error e) {
                  posible = false;
                  salida = "Comando no ejecutable\n"+e; }
             }
             else if(command == "right") {
             try {
             world.moveHorizontally(x,true);salida = "Command: Walk R";}
                catch(Error e) {
                  posible = false;
                 salida = "Comando no ejecutable\n"+e; }
             }
              else if(command == "left") {
             try {
             world.moveHorizontally(-x,true);salida = "Command: Walk L";}
                catch(Error e) {
                  posible = false;
                 salida = "Comando no ejecutable\n"+e; }
             }
             else if(command == "north") {
             try {
             facing = world.facingNorth();
                while(facing == false)
                        {world.turnRight();
                facing = world.facingNorth();
                        }
             world.moveForward(x, true);
             salida = "Command: Walk N";}
                catch(Error e) {
                  posible = false;
                 salida = "Comando no ejecutable\n"+e; }
             }
             else if(command == "south") {
             try {
             facing = world.facingSouth();
                while(facing == false)
                        {world.turnRight();
                facing = world.facingSouth();
                        }
             world.moveForward(x, true);
             salida = "Command: Walk S";}
                catch(Error e) {
                  posible = false;
                 salida = "Comando no ejecutable\n"+e; }
             }
              else if(command == "east") {
             try {
             facing = world.facingEast();
                while(facing == false)
                        {world.turnRight();
                facing = world.facingEast();
                        }
             world.moveForward(x, true);
             salida = "Command: Walk E";}
                catch(Error e) {
                  posible = false;
                  salida = "Comando no ejecutable\n"+e; }
             }
             else if(command == "west") {
             try {
             facing = world.facingWest();
                while(facing == false)
                        {world.turnRight();
                facing = world.facingWest();
                        }
             world.moveForward(x, true);
             salida = "Command: Walk W";}
                catch(Error e) {
                  posible = false;
                  salida = "Comando no ejecutable\n"+e; }
             }
         }
           {if ("" != null) return posible;}
    throw new Error("Missing return statement in function");
}

  final public boolean turn(boolean ejecutar) throws ParseException {boolean posible = true;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case RIGHT:{
      jj_consume_token(RIGHT);
if(ejecutar) {
                world.turnRight();salida = "Command: turn R";
                }
        {if ("" != null) return posible;}
      break;
      }
    case LEFT:{
      jj_consume_token(LEFT);
if(ejecutar) {
          world.turnRight();world.turnRight();world.turnRight();
          salida = "Command: turn L"; }
          {if ("" != null) return posible;}
      break;
      }
    case AROUND:{
      jj_consume_token(AROUND);
if(ejecutar) {
          world.turnRight();
          world.turnRight();
          salida = "Command: turn A"; }
          {if ("" != null) return posible;}
      break;
      }
    default:
      jj_la1[12] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}

  final public boolean turnTo(boolean ejecutar) throws ParseException {boolean facing;
        boolean posible= true;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case NORTH:{
      jj_consume_token(NORTH);
if (ejecutar) {
           facing = world.facingNorth();
         while(facing == false)
         {      world.turnRight();
            facing = world.facingNorth();
           }
         salida = "Command: turnTo N";
                }
        {if ("" != null) return posible;}
      break;
      }
    case SOUTH:{
      jj_consume_token(SOUTH);
if (ejecutar) {
          facing = world.facingSouth();
         while(facing == false)
         {      world.turnRight();
            facing = world.facingSouth();
           }
         salida = "Command: turnTo S"; }
         {if ("" != null) return posible;}
      break;
      }
    case EAST:{
      jj_consume_token(EAST);
if (ejecutar) {
          facing = world.facingEast();
                 while(facing == false)
                 {      world.turnRight();
                    facing = world.facingEast();
                   }
                 salida = "Command: turnTo E"; }
        {if ("" != null) return posible;}
      break;
      }
    case WEST:{
      jj_consume_token(WEST);
if (ejecutar) {
          facing = world.facingWest();
                 while(facing == false)
                 {      world.turnRight();
                    facing = world.facingWest();
                   }
                 salida = "Command: turnTo W"; }
        {if ("" != null) return posible;}
      break;
      }
    default:
      jj_la1[13] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}

  final public boolean drop(boolean ejecutar) throws ParseException {int x=1;
         String nom;
         boolean posible = true;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case NUM:{
      x = num();
if (ejecutar) {
           try {
              world.putChips(x);salida = "Command: Drop Chips"; }
           catch(Error e) {
                  posible = false;
                  salida = "Comando no ejecutable\n"+e;
                }
           }
         {if ("" != null) return posible;}
      break;
      }
    case STR:{
      nom = nombre();
if(ejecutar) {
                        boolean isVarDef1 = variables.containsKey(nom);
                        if (isVarDef1)
                                {try
                                  {
                                  world.putChips(variables.get(nom));salida = "Command: Drop Chips";
                                   }
                                 catch(Error e) {
                                   posible = false;
                                   salida = "Comando no ejecutable\n"+e;
                                 }
                                }
                        else
                        {
                        salida= "Error. Variable no definida";
                        }
                        }
                 {if ("" != null) return posible;}
      break;
      }
    default:
      jj_la1[14] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}
